<resources>
    <string name="app_name">SuperHeroesComicUniverse</string>
    <string name="intelligence">Intelligence:</string>
    <string name="strength">Strength:</string>
    <string name="speed">Speed:</string>
    <string name="durability">Durability:</string>
    <string name="power">Power:</string>
    <string name="combat">Combat:</string>
    <string name="load_random_heroes">Load Random Heroes</string>
</resources>